          Bio::SeqEvolution::*
          Bio::SeqFeature::SiRNA::*
          Bio::SeqIO::abi
          Bio::SeqIO::agave
          Bio::SeqIO::alf
          Bio::SeqIO::chadoxml
          Bio::SeqIO::chaos
          Bio::SeqIO::chaosxml
          Bio::SeqIO::ctf
          Bio::SeqIO::entrezgene
          Bio::SeqIO::excel
          Bio::SeqIO::exp
          Bio::SeqIO::flybase_chadoxml
          Bio::SeqIO::nexml
          Bio::SeqIO::pln
          Bio::SeqIO::strider
          Bio::SeqIO::ztr
          Bio::Structure::*
          Bio::Taxonomy::*
          Bio::Tools::AlignFactory
          Bio::Tools::Analysis::* (except SimpleAnalysisBase)
          Bio::Tools::Gel
          Bio::Tools::HMMER::*
          Bio::Tools::Hmmpfam
          Bio::Tools::Phylo::Gumby
          Bio::Tools::Protparam
          Bio::Tools::Run::RemoteBlast
          Bio::Tools::SiRNA::*
          Bio::Tools::dpAlign
          Bio::Tools::pSW
          Bio::Tree::AlleleNode
          Bio::Tree::Draw::Cladogram
          Bio::TreeIO::nexml
          Bio::TreeIO::svggraph
          Bio::Variation::*

    * The following modules are new in the BioPerl distribution.  They
      have been previously released in the BioPerl-Run distribution.
      This will enable smaller distributions that provide a
      Bio::Tool::Run interface, to be only dependent on the BioPerl
      distribution instead of the whole (very large) BioPerl-Run:

          Bio::Tools::Run::Analysis
          Bio::Tools::Run::AnalysisFactory
          Bio::Tools::Run::Phylo::PhyloBase
          Bio::Tools::Run::WrapperBase
          Bio::Tools::Run::WrapperBase::CommandExts

    * The following programs have been removed:

          bp_biofetch_genbank_proxy
          bp_blast2tree
          bp_bulk_load_gff
          bp_composite_LD
          bp_das_server
          bp_download_query_genbank
          bp_fast_load_gff
          bp_flanks
          bp_genbank2gff
          bp_generate_histogram
          bp_heterogeneity_test