@@ -1,24 +1,0 @@
-Created: Jueves, 08 de Junio de 2006 01:56 p.m.
-
-This is a test sequence created with EditSeq (Lasergene's DNAStar)
-
-^^
-ATCGATCGATCG
-TCGATCGATCGA
-CGATCGATCGTT
-^^
->gi|105633134|gb|DW246643.1|DW246643 JC3_E04 Forward JC Glycine max cDNA 5', mRNA sequence
-^^
-ATACACCTCTTTCTCATTGAACATTGGAATCTGGACAAGCACGACGGGGTAATTAGAGTTGCCGAGTTCCTCGTCGTCTTGGAGTGGCTCGAACTTGTAGCGCTGGTGTGGCTTCTTCCAGAAGAGCTTGACGAGGATGATGACAATGCCCATGTAGACCCTCTCCATGAAGAGCATGAGCGCCATGGCGAGGCTAATGC
-^^
-Sample protein sequence in Lasergene format
-ALEU_HORVU
-
-
-^^
-MAHARVLLLALAVLATAAVAVASSSSFADSNPIRPVTDRAASTLESAVLGALGRTRHALRFARFAVRYGK
-SYESAAEVRRRFRIFSESLEEVRSTNRKGLPYRLGINRFSDMSWEEFQATRLGAAQTCSATLAGNHLMRD
-AAALPETKDWREDGIVSPVKNQAHCGSCWTFSTTGALEAAYTQATGKNISLSEQQLVDCAGGFNNFGCNG
-GLPSQAFEYIKYNGGIDTEESYPYKGVNGVCHYKAENAAVQVLDSVNITLNAEDELKNAVGLVRPVSVAF
-QVIDGFRQYKSGVYTSDHCGTTPDDVNHAVLAVGYGVENGVPYWLIKNSWGADWGDNGYFKMEMGKNMCA
-IATCASYPVVAA
